<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_0" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TestCodeExample" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pD0-uR-vuM">
                                <rect key="frame" x="182.66666666666666" y="197" width="25" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="valueLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rq1-Gu-me6">
                                <rect key="frame" x="169" y="295" width="52" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="minusButton"/>
                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="빼기"/>
                                <connections>
                                    <action selector="minusButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="FX5-ZW-g0l"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ynZ-vM-e6Y">
                                <rect key="frame" x="156" y="393" width="78" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="plusButton"/>
                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="더하기"/>
                                <connections>
                                    <action selector="plusButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="VvR-SX-R1K"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="ynZ-vM-e6Y" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="1sm-wh-TK1"/>
                            <constraint firstItem="rq1-Gu-me6" firstAttribute="top" secondItem="pD0-uR-vuM" secondAttribute="bottom" constant="50" id="Kdi-5X-vEh"/>
                            <constraint firstItem="rq1-Gu-me6" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Nc6-Ve-6ux"/>
                            <constraint firstItem="pD0-uR-vuM" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="QVe-kK-Dhc"/>
                            <constraint firstItem="pD0-uR-vuM" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="150" id="fe0-e5-JDq"/>
                            <constraint firstItem="ynZ-vM-e6Y" firstAttribute="top" secondItem="rq1-Gu-me6" secondAttribute="bottom" constant="50" id="i2F-3G-Iqv"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="valueLabel" destination="pD0-uR-vuM" id="oIJ-Lt-gKd"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-6.1538461538461533" y="3.5545023696682461"/>
        </scene>
    </scenes>
    <resources>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
